@@ -37,6 +37,7 @@ namespace kt
 		TorrentFileListModel(bt::TorrentInterface* tc,DeselectMode mode,QObject* parent);
 		virtual ~TorrentFileListModel();
 		
+		virtual void changeTorrent(bt::TorrentInterface* tc);
 		virtual int rowCount(const QModelIndex & parent) const;
 		virtual int columnCount(const QModelIndex & parent) const;
 		virtual QVariant headerData(int section, Qt::Orientation orientation,int role) const;
