@@ -76,6 +76,7 @@ namespace kt
 		TorrentFileTreeModel(bt::TorrentInterface* tc,DeselectMode mode,QObject* parent);
 		virtual ~TorrentFileTreeModel();
 		
+		virtual void changeTorrent(bt::TorrentInterface* tc);
 		virtual int rowCount(const QModelIndex & parent) const;
 		virtual int columnCount(const QModelIndex & parent) const;
 		virtual QVariant headerData(int section, Qt::Orientation orientation,int role) const;
